# airak-gazebo-ros-plugins

./: CMakeLists.txt  README.md  package.xml  setup.bash
config/: ekf.yaml
models/ddbot/: model.config  model.sdf
models/kinect_ros/: model.sdf
src/: dd_control.cc
worlds/: demo_ddbot.world
